@@ -5,6 +5,20 @@ int timer_settime(timer_t timerid               CK_ATTRIBUTE_UNUSED,
                   const struct itimerspec *new_value, 
                   struct itimerspec * old_value CK_ATTRIBUTE_UNUSED)
 {
+#ifdef HAVE_SETITIMER
+    /*
+     * If the system does not have timer_settime() but does have
+     * setitimer() use that instead of alarm().
+     */
+    struct itimerval new;
+
+    new.it_value.tv_sec     = new_value->it_value.tv_sec;
+    new.it_value.tv_usec    = new_value->it_value.tv_nsec / 1000;
+    new.it_interval.tv_sec  = new_value->it_interval.tv_sec;
+    new.it_interval.tv_usec = new_value->it_interval.tv_nsec / 1000;
+
+    return setitimer(ITIMER_REAL, &new, NULL);
+#else
     int seconds = new_value->it_value.tv_sec;
     
     /* 
@@ -19,4 +33,5 @@ int timer_settime(timer_t timerid               CK_ATTRIBUTE_UNUSED,
     alarm(seconds);
     
     return 0;
+#endif
 }
